--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,16 @@
   <%= form.text_field :phone_number %>
 </div>
 
+<div class = "file-field">
+   <%= form.label :avatar %>
+  <%= form.file_field :avatar %>
+</div>  
+
+
+
+  
+</div>
+
 <!-- age -->
 <!-- <div class="text-field">
   <%= form.label :email %>
