--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -17,6 +17,8 @@
 	<%= f.text_field :address %><br>
 	<%= f.label :price %><br>
 	<%= f.number_field :price %><br>
+	<%= f.label :images %><br>
+	<%= f.file_field :images, multiple: true %><br>
 	<%= f.submit %>
 <% end %>
 
