--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
       <header>
       <% if signed_in? %>
         Signed in as: <%= current_user.email %>
+        <%= button_to 'Edit', edit_user_path(current_user.id), method: :get%>
         <%= button_to 'Sign out', sign_out_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign in', sign_in_path %>
