--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -7,10 +7,11 @@
 	<%end%>
 <%end%>
 
-<%if current_user.role == "host" || current_user.role == "admin" %>
-	<p><a href="/users/<%=current_user.id%>/listings/new"><button>Create New Listing</button></a></p>
+<%if current_user != nil%>
+	<%if current_user.role == "host" || current_user.role == "admin" %>
+		<p><a href="/users/<%=current_user.id%>/listings/new"><button>Create New Listing</button></a></p>
+	<%end%>
 <%end%>
-
 
 
 <%= paginate @listings %>
